--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -22,6 +22,7 @@
     <ProjectGuid>{8A1EA8DA-78AE-41B8-8F9E-6929D7666196}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>AmjulaMusicTheory</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -84,7 +85,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\..\..\..\</OutDir>
+    <OutDir>..\..\..\..\Build\$(Configuration)\</OutDir>
     <IntDir>..\..\..\..\Build\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -229,35 +230,36 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalOptions>/I "../../../../amjulib/Source/Events" 
-/I "../../../../amjulib/Source/EventsWin32" 
-/I "../../../../amjulib/Source/EventsSDL" 
-/I "../../../../amjulib/Source/FileUtils" 
-/I "../../../../amjulib/Source/Localise" 
-/I "../../../../amjulib/Source/AmjuGL" 
-/I "../../../../amjulib/Source/AmjuGLOpenGL" 
-/I "../../../../amjulib/Source/AmjuGLDX9" /I "../../../../amjulib/Source/AmjuGLDX11" 
-/I "../../../../amjulib/Source/Mem" 
-/I "../../../../amjulib/Source/Md2" 
-/I "../../../../amjulib/Source/Image" 
-/I "../../../../amjulib/Source/Geom" 
-/I "../../../../amjulib/Source/Strings" 
-/I "../../../../amjulib/Source/TimeUtils" 
-/I "../../../../amjulib/Source/Game" 
-/I "../../../../amjulib/Source/Resource" 
-/I "../../../../amjulib/Source/Scene" 
-/I "../../../../amjulib/Source/Obj"  
-/I "../../../../amjulib/Source/Collision" 
-/I "../../../../amjulib/Source/Gui" 
-/I "../../../../amjulib/Source/Font" 
-/I "../../../../amjulib/Source/Sound" 
-/I "../../../../amjulib/Source/SoundBass" 
-/I "../../../../amjulib/Source/GeomLoad" 
-/I "../../../../amjulib/Source/GeomDraw"
-/I "../../../../amjulib/Source/Utils" 
-/I "../../../../amjulib/Source/Main" 
-/I "../../../../amjulib/Source/Network"  /I "../../../../amjulib/Source/Thread"  %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/I "../../../../../amjulib/Source/Events" 
+/I "../../../../../amjulib/Source/EventsWin32" 
+/I "../../../../../amjulib/Source/EventsSDL" 
+/I "../../../../../amjulib/Source/FileUtils" 
+/I "../../../../../amjulib/Source/Localise" 
+/I "../../../../../amjulib/Source/AmjuGL" 
+/I "../../../../../amjulib/Source/AmjuGLOpenGL" 
+/I "../../../../../amjulib/Source/AmjuGLDX9" /I "../../../../amjulib/Source/AmjuGLDX11" 
+/I "../../../../../amjulib/Source/Mem" 
+/I "../../../../../amjulib/Source/Md2" 
+/I "../../../../../amjulib/Source/Image" 
+/I "../../../../../amjulib/Source/Geom" 
+/I "../../../../../amjulib/Source/Strings" 
+/I "../../../../../amjulib/Source/TimeUtils" 
+/I "../../../../../amjulib/Source/Game" 
+/I "../../../../../amjulib/Source/Resource" 
+/I "../../../../../amjulib/Source/Scene" 
+/I "../../../../../amjulib/Source/Obj"  
+/I "../../../../../amjulib/Source/Collision" 
+/I "../../../../../amjulib/Source/Gui" 
+/I "../../../../../amjulib/Source/Font" 
+/I "../../../../../amjulib/Source/Sound" 
+/I "../../../../../amjulib/Source/SoundBass" 
+/I "../../../../../amjulib/Source/GeomLoad" 
+/I "../../../../../amjulib/Source/GeomDraw"
+/I "../../../../../amjulib/Source/Utils" 
+/I "../../../../../amjulib/Source/Main" 
+/I "../../../../../amjulib/Source/Network"  /I "../../../../../amjulib/Source/Thread"  %(AdditionalOptions)</AdditionalOptions>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
