Add stave types, so we can eventually have pitch as well as rhythm

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Script/Msvc/AmjulaMusicTheory/.vs/
 Assets/Maya/.mayaSwatches/
 Assets/obj/.mayaSwatches/
 Assets/Music/SoundFXSource/*.wav
+*.user
