--- a/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="..\..\..\..\Source\MakeScore\Flag.cpp" />
     <ClCompile Include="..\..\..\..\Source\MakeScore\Glyph.cpp" />
     <ClCompile Include="..\..\..\..\Source\MakeScore\MakeScore.cpp" />
+    <ClCompile Include="..\..\..\..\Source\MakeScore\Stave.cpp" />
     <ClCompile Include="..\..\..\..\Source\MakeScore\Tie.cpp" />
     <ClCompile Include="..\..\..\..\Source\MakeScore\TimeSig.cpp" />
     <ClCompile Include="..\..\..\..\Source\MakeScore\TimeValue.cpp" />
@@ -161,6 +162,7 @@
     <ClInclude Include="..\..\..\..\Source\MakeScore\Glyph.h" />
     <ClInclude Include="..\..\..\..\Source\MakeScore\IGlyph.h" />
     <ClInclude Include="..\..\..\..\Source\MakeScore\MakeScore.h" />
+    <ClInclude Include="..\..\..\..\Source\MakeScore\Stave.h" />
     <ClInclude Include="..\..\..\..\Source\MakeScore\Tie.h" />
     <ClInclude Include="..\..\..\..\Source\MakeScore\TimeSig.h" />
     <ClInclude Include="..\..\..\..\Source\MakeScore\TimeSigGlyph.h" />
