--- a/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\..\..\..\Source\MakeScore\Pitch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\MakeScore\Clef.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Source\MakeScore\MakeScore.h">
